--- a/CoolWeather/app/src/main/res/layout/activity_weather.xml
+++ b/CoolWeather/app/src/main/res/layout/activity_weather.xml
@@ -3,6 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary">
+    <ImageView
+        android:id="@+id/bing_pic_img"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop">
+    </ImageView>
     <ScrollView
         android:id="@+id/weather_layout"
         android:layout_width="match_parent"
@@ -10,6 +16,7 @@
         android:scrollbars="none"
         android:overScrollMode="never">
         <LinearLayout
+            android:fitsSystemWindows="true"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
