--- a/CoolWeather/app/src/main/res/layout/title.xml
+++ b/CoolWeather/app/src/main/res/layout/title.xml
@@ -8,8 +8,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:textSize="20sp"
-        android:textColor="#fff"
-        android:text="默认">
+        android:textColor="#fff">
     </TextView>
     <TextView
         android:id="@+id/title_update_time"
